@@ -7,7 +7,6 @@
 <!DOCTYPE html>
 <html <?php language_attributes(); ?>>
 <head>
-<title><?php wp_title('|', true, 'right'); ?></title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="<?php bloginfo( 'charset' ); ?>" />
 <link rel="profile" href="http://gmpg.org/xfn/11">
